fix skills layout issue

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,18 +1,11 @@
 #home {
     position: relative;
-    background: url('./../../assets/images/stars.jpg');
+    background: url('./../../assets/images/header_background.jpg');
     background-size: cover;
-    background-repeat: repeat;
     background-position: center;
+    background-repeat: repeat;
 
-    .app__wrapper {
-        padding: 0;
-
-        .copyright {
-            display: none;
-        }
-    }
-
+    .app-container { padding: 0; }
 }
 
 .header {
@@ -21,94 +14,113 @@
     height: 100%;
     flex-direction: row;
     padding: 6rem 2rem 0;
-
-    @media screeen and (min-width: 2000px) {
+   
+    @media screen and (min-width: 2000px) {
         padding-top: 8rem;
     }
 
     @media screen and (max-width: 1200px) {
         flex-direction: column;
     }
-    @media screen and (max-width: 400px) {
+
+    @media screen and (max-width: 450px) {
         padding: 6rem 1rem 2rem;
     }
-
 }
 
-.header-info{
+.header-info {
     flex: 0.65;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     height: 100%;
+    margin: 0 2rem;
+    width: 100%;
+   
 
-    @media screen and (max-width: 2000px) {
+
+
+    @media screen and (max-width: 1200px) {
         width: 100%;
         margin-right: 0rem;
     }
-
 }
 
-.header-badge {
+.header-text {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
+    color: var(--white);
+ 
 
-    .badge-cmp, .tag-cmp {
-        padding: 1rem 2rem;
-        border: var(--white);
-        border-radius: 15px;
-        flex-direction: row;
-        width: auto;
-        box-shadow: 0 0 20px rgba(0,0,0,0.1);
-        color: var(--white);
 
-        p {
-            color: var(--white);
-            font-size: 1rem;
-
-        }
-
-        h1 {
-            color: white;
-        }
-    }
-
-    .tag-cmp {
+    .header-text-container {
         flex-direction: column;
-        margin-top: 3rem;
         color: var(--white);
+        width: 100%;
+        padding: 1rem 2rem;
+        border-radius: 15px;
+  
+        width: 100%;
 
-        p {
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+
+        .greeting {
             width: 100%;
-            // text-transform: uppercase;
-            text-align: right;
             color: var(--white);
-            font-size: 1rem;
+            font-size: 1.5rem;
+            text-align: center;
+
+            span {
+                font-size: 2.5rem;
+                padding-right: 1.5rem;
+        
+                @media screen and (min-width: 2000px) {
+                    font-size: 5rem;
+                }
+            }
+
+        }
+
+        .intro {
+            flex-direction: column;
+            align-items: flex-end;
+            width: 100%;
+            margin-top: 1rem;
+   
+
+            h1 {
+                color: var(--white);
+                margin-bottom: 5px;
+            }
+
+            .job-title {
+                flex-direction: column;
+                align-items: flex-end;
+                color: var(--white);
+           
+                width: 100%;
+                text-align: right;
+                color: var(--white);
+                font-size: 1.2rem;
+                font-weight: 700;
+              
+             
+            }
         }
     }
 
-    span {
-        font-size: 2.5rem;
-
-        @media screen and (min-width: 2000px) {
-            font-size: 5rem;
-        }
-    }
     @media screen and (max-width: 1200px) {
         justify-content: flex-start;
         align-items: flex-start;
-        flex-direction: column;
-        
     }
-
 }
 
 
-.header-circles{
+.header-circles {
     flex: 0.75;
     display: flex;
     flex-direction: column;
@@ -171,10 +183,8 @@
         flex-direction: row;
         flex-wrap: wrap;
         margin-left: 0;
-        div {
-            margin: 1rem;
-        }
         
+        div { margin: 1rem; } 
     }
 
 }
@@ -194,23 +204,8 @@
         z-index: 1;
         padding: 25%;
     }
-}
 
-
-.overlay-circle {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
-    width: 100%;
-    height: 90%;
-
-    @media screen and (max-width: 1200px) {
+     @media screen and (max-width: 1200px) {
         margin: 2rem 0;
     }
-
 }
-
-
-.circle-cmp {}
