--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -3,101 +3,97 @@
     width: 100%;
     flex-direction: column;
 }
+
 .skills-container {
     width: 80%;
     margin-top: 3rem;
+  
     display: flex;
     flex-direction: row;
-
+  
     @media screen and (max-width: 900px) {
-        width: 100%;
-        flex-direction: column;
+      width: 100%;
+      flex-direction: column;
     }
 }
+
 .skills-list {
     flex: 1;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: flex-start;
-
+  
     margin-right: 5rem;
-
-    @media screen and (max-width:900px) {
-        margin-right: 0;
-        justify-content: center;
-        align-items: center;
-
-        
+  
+    @media screen and (max-width: 900px) {
+      margin-right: 0;
+      justify-content: center;
+      align-items: center;
     }
 }
 
 .skills-item {
+  
     flex-direction: column;
     text-align: center;
     margin: 1rem;
-
+    transition: all 0.3s ease-in-out;
+  
     div {
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
-        background-color: var(--primary-medium);
-        transition: all 0.3s ease-in-out;
-
-     
-
-
-        img {
-            width: 50%;
-            height: 50%;
-          
-
-        }
-
-        &:hover {
-           box-shadow: 0 0 25px #eeedee;
-        }
-
-        @media screen and (min-width: 2000px) {
-            width: 150px;
-            height: 150px;
-            
-        }
-        @media screen and (max-width: 450px) {
-            width: 70px;
-            height: 70px;
-        }
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      background-color: #fef4f5;
+  
+      img {
+        width: 50%;
+        height: 50%;
+      }
+  
+      &:hover {
+        box-shadow: 0 0 25px #fef4f5;
+      }
+  
+      @media screen and (min-width: 2000px) {
+        width: 150px;
+        height: 150px;
+      }
+  
+      @media screen and (max-width: 450px) {
+        width: 70px;
+        height: 70px;
+      }
     }
+
+  p {
+    font-weight: 500;
+    margin-top: 0.5rem;
+  }
+
+  @media screen and (min-width: 2000px) {
+    margin: 1rem 2rem;
 
     p {
-        font-weight: 500;
-        margin-top: 0.5rem;
+      margin-top: 1rem;
     }
-    @media screen and (min-width: 2000px) {
-        margin: 1rem 2rem;
-    
-        p {
-          margin-top: 1rem;
-        }
-      }
+  }
 }
 
 
-.skills-exp {
-    flex: .6;
+.experience {
+    flex: 1;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
+  
     @media screen and (max-width: 900px) {
-        margin-top: 2rem;
-
-
+      margin-top: 2rem;
     }
+  }
 
-}
-
-.skills-exp-item {
+.experience-item {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -106,51 +102,41 @@
     margin: 1rem 0;
 }
 
-
-.skills-exp-works {
+.experience-works {
     flex: 1;
 
-    .skills-exp-work {
+    .experience-work {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
         margin-bottom: 1rem;
-
-
-    }
-    h4 {
-        font-weight: 500;
-    }
-    p {
-        font-weight: 400;
-        color: var(--gray);
-        margin-top: 5px;
-
-    }
+        cursor: pointer;
+    
+        h4 {
+          font-weight: 500;
+        }
+    
+        p {
+          font-weight: 400;
+          color: var(--gray-color);
+          margin-top: 5px;
+        }
+      }
 }
 
 
-.skills-exp-year {
+.experience-year {
     margin-right: 3rem;
-    width: 150px;
 
     p {
-        font-weight: 800;
-        color: var(--secondary);
-
-      
+      font-weight: 800;
+      color: var(--secondary-color);
     }
-
+  
     @media screen and (max-width: 450px) {
-        margin-right: 1rem;
+      margin-right: 1rem;
     }
-
-}
-
-.desc {
-    width: 150%;
-    line-height: 1.5;
 }
 
 
